# neuroedge_v2

./: .coverage  .env.example  .gitignore  .releaserc.json  Dockerfile  EVALUATION.md  Makefile  README.md  conftest.py  docker-compose.yml  neuroedge.db  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  start_neuroedge_v2.bat
backend/: config.py
backend/api/: main.py  schemas.py
backend/db/: database.py
backend/services/: anomaly_detector.py  gaze_analytics.py  network_reliability.py
edge/: __init__.py  sender.sh
edge/iot_sim/: __init__.py  simulator.py
frontend/: app.js  edge_dashboard.html  eye_dashboard.html  health_dashboard.html  index.html  mobile.html  mobile.js  style.css
infra/gitops/: argocd-app.yaml
infra/helm/neuroedge/: Chart.yaml  values.yaml
infra/helm/neuroedge/templates/: _helpers.tpl  deployment.yaml  service.yaml
infra/k8s/: deployment.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: neuroedge.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
tests/unit/: test_services.py
workflows/: ci.yml
